# syokota-cyber-study-tracker-project

./: .bandit  .cursorrules  .flake8  .gitignore  README.md  bandit-report.json  bucket-policy.json  clean-test-event.json  cloudfront-config.json  cloudfront-update-simple.json  cloudfront-update.json  current-cloudfront-config.json  current-config.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-lambda.txt  requirements.txt  serverless.yml  setup.py  study_records_20250726_092835.csv  study_records_20250726_093234.json  test-event.json  test-payload.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.serverless/: cloudformation-template-update-stack.json  requirements  requirements.txt  serverless-state.json
docs/: aws-assets-inventory.md  aws-cleanup-checklist.md  aws-deployment.md  aws-migration-plan.md  migration-procedure.md  phase1-execution-results.md  phase2-execution-results.md  phase3-execution-results.md  setup.md
logs/: error-log.md  progress-tracker.md  study_data.json
logs/daily-logs/: 2025-07-22.md  2025-07-23.md  2025-07-24.md  2025-07-26.md  2025-07-27.md  2025-07-28.md  2025-07-29.md  2025-07-30.md  2025-07-31.md  2025-08-01.md  2025-08-02.md  2025-08-03.md  2025-08-05.md
package/: __init__.py  lambda_handler.py  lambda_handler_backup.py  lambda_handler_secure.py
package/alembic-1.16.4.dist-info/: RECORD
package/api/: __init__.py
package/cli/: __init__.py
package/click-8.2.1.dist-info/: RECORD
package/database/: __init__.py  connection.py
package/fastapi-0.116.1.dist-info/: RECORD
package/mako-1.3.10.dist-info/: RECORD
package/models/: __init__.py  study_record.py
package/pydantic_settings-2.10.1.dist-info/: RECORD
package/python_dotenv-1.1.1.dist-info/: RECORD
package/uvicorn-0.35.0.dist-info/: RECORD
plans/: phase1-plan.md
requirements/: migration-requirements.md  migration-specification.md  requirements.md  specification.md
rules/: git-workflow.md
scripts/: run-ci-local.bat  run-ci-local.sh
src/: __init__.py
study-tracker-frontend/: README.md  package-lock.json  package.json
tests/: __init__.py  test_api.py  test_cli.py  test_security.py  test_study_record.py
(+18 files in other folders)
